--- a/shop/src/app/pages/auth/login/login.html
+++ b/shop/src/app/pages/auth/login/login.html
@@ -46,7 +46,8 @@
             <div class="form-group">
                 <div class="label-row">
                     <label for="password">Password</label>
-                    <a class="forgot-link">Forgot?</a>
+                    <a [routerLink]="['/forgot-password']" [queryParams]="{ email: loginForm.value.email }"
+                        class="forgot-link">Forgot?</a>
                 </div>
                 <div class="input-wrapper">
                     <span class="input-icon">
