--- a/shop/src/app/app.css
+++ b/shop/src/app/app.css
@@ -1,10 +1,4 @@
-:host {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
 .main-content {
-    flex: 1;
-    width: 100%;
+    min-height: 80vh;
+    padding: 2rem 0;
 }
