--- a/shop/src/app/pages/auth/profile/profile.html
+++ b/shop/src/app/pages/auth/profile/profile.html
@@ -9,7 +9,7 @@
             </div>
             <div class="user-intro">
                 <h1>Welcome, {{ (user$ | async)?.name }}</h1>
-                <p>Manage your account settings and preferences.</p>
+                <p>Manage your account settings and profile information</p>
             </div>
         </div>
     </header>
